style: fixed some spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,7 @@
   color: gray;
   display: flex;
   justify-content: left;
+  margin-bottom: 1em;
   
 }
 .titleOne {
@@ -89,13 +90,15 @@
   font-weight: 100;
   display: flex;
   justify-content: left;
+  margin-bottom: 1em;
+
 }
 .img1 {
   width: 100%;
   height: 20%;
 }
 .firstLetterLarge {
-  font-size: 4rem; /* Adjust the size as desired */
+  font-size: 4rem; 
   float: left;
   line-height: 0.8;
   margin-right: 0.2rem;
@@ -108,7 +111,7 @@
   font-weight: 300;
   margin: 0;
   color: gray;
-  font-family: 'Merriweather', serif; /* Added a fancy font */
+  font-family: 'Merriweather', serif; 
   display: flex;
   justify-content: left;
   text-align: left;
@@ -137,12 +140,15 @@
   display: flex;
   justify-content: left;
   padding-top: 1em;
+  margin-bottom: 1em;
 }
 .titleTwo {
   font-size: 45px;
   font-weight: 100;
   display: flex;
   justify-content: left;
+  margin-bottom: 1em;
+  
 }
 .img2 {
   width: 100%;
